# NeuroMouse

./: .dockerignore  .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  COORDINATOR.md  DATA_CONTRACT.md  DESIGN_NOTES.md  Dockerfile  Dockerfile.backend  Makefile  README.md  REPOSITORY_METADATA.md  SECURITY.md  STATUS.md  app.html  docker-compose.yml  index.html  mkdocs.yml  package.json  pyproject.toml  server.mjs  style.css
.github/workflows/: ci.yml  pages.yml
audit/: REPORT-v2.md  REPORT.md  agent-1-quality.md  agent-2-perf.md  agent-3-data.md  agent-4-functional.md  agent-5-integration.md  agent-6-security.md  agent-7-ux.md  agent-8-regression.md  auth-pentest.md  pentest-prod.md
audit/v2/: deployment-surface.md  refute-rounds.md
bench/: README.md  __init__.py  baseline-method-report.md  baseline-method-results.json  method-perf-report-after.md  method-perf-results-after.json  perf-report.md  perf-results.json  perf_harness.py  test_method_perf_harness.py  test_methods_ground_truth.py  test_perf_harness.py
contracts/: pyproject.toml
contracts/schema/: dataset.schema.json
contracts/src/neuromouse_contract/: __init__.py  dataset.py
contracts/tests/: test_dataset_contract.py  test_neuromouse_contract_package.py
data/: dandi-kinematic-dandisets.csv  data.json
datasets/golden/: README.md  dandi_ingest.json  mea_synthetic.json
docs/: ARCH-REVIEW.md  ARCHITECTURE.md  CONTRIBUTING.md  MEA_QUICKSTART.md  METHOD_AUTHORING.md  POSITIONING.md  README.md
docs/adr/: 0001-monorepo-uv-workspace.md  0002-executable-data-contract.md  0003-method-sdk-plugin-surface.md  0004-montage-agnostic-channel-ceiling.md  0005-fuzz-gated-hardening.md  0006-uv-link-mode-clone.md  0006-uv-link-mode-copy.md  0007-wetware-mea-direction.md
docs/stylesheets/: extra.css
examples/: quickstart_mea.py  test_quickstart_mea.py
infra/: README.md
js/: app-modes.js  app-modes.test.mjs  backend-auth-client.test.mjs  backend-client-url.test.mjs  backend-client.js  disposables.js  e2e-auth-flow.test.mjs  layout.js  loader.js  monitor.js  session-store.js  sessions.js  state.js  ui-panels.js  viewer-state.js  viewer-structure.js  viewer.js  workbench.js
js/panels/: method-panel.js
js/sources/: live-source.js  static-source.js
js/views/: centroid-view.js  channel-grid.js  channel-network.js  chart-utils.js  geometry-view.js  kuramoto.js  monitor-view.js  phase-space.js  playback-bar.js  polar-chronomap.js  psd-view.js  session-legend.js  tda-view.js
js/workers/: dsp-worker.js
landing/: 404.html  design-tokens.css  lab-plate.css  neuromouse.css  site.webmanifest
landing/data/: neuro-data.js
landing/js/: data-plate.js  previews.js
methods/: README.md  electrode_connectivity.py  network_burst.py  spike_detect.py
site/: 404.html  index.html
site/ARCH-REVIEW/: index.html
site/ARCHITECTURE/: index.html
site/CONTRIBUTING/: index.html
site/MEA_QUICKSTART/: index.html
site/METHOD_AUTHORING/: index.html
site/POSITIONING/: index.html
site/adr/0001-monorepo-uv-workspace/: index.html
site/adr/0002-executable-data-contract/: index.html
site/adr/0003-method-sdk-plugin-surface/: index.html
site/adr/0004-montage-agnostic-channel-ceiling/: index.html
site/adr/0005-fuzz-gated-hardening/: index.html
site/adr/0006-uv-link-mode-clone/: index.html
site/adr/0007-wetware-mea-direction/: index.html
site/search/: search_index.json
tests/: FUZZ-FINDINGS.md  backend-client.test.mjs  backend-mea-demo.spec.cjs  backend-mode.spec.cjs  explain.test.mjs  import-smoke.spec.cjs  loader.test.mjs  method-panel.test.mjs  monitor.test.mjs  server-routes.test.mjs  sessions.test.mjs  validate-data.test.mjs  viewer-parity.test.mjs  workbench.test.mjs
tests/fixtures/: mock-anthropic-fetch.mjs  viewer-structure-baseline.json
tests/fuzz/: backend-jobs.fuzz.mjs  fuzz-runner.mjs  fuzz-target-oracle.py  live-payload.fuzz.mjs  mea-adapter.fuzz.mjs  package-lock.json  package.json  run-engine.fuzz.mjs  sorter-seam.fuzz.mjs
tests/integration/: README.md
tests/property/: backend-jobs.property.test.mjs  data-fixtures.mjs  fuzz-harness.mjs  import-csv-zip.property.test.mjs  mea-adapter.property.test.mjs  package-lock.json  package.json  python-fuzz-runner.mjs  run-engine.property.test.mjs  sorter-seam.property.test.mjs  validate-data.property.test.mjs  zip-fixtures.mjs
tools/: compute_phase2.py  compute_phase3.py  convert_data.py  run_import_smoke.sh  soulsyrup1_map.md  verify_data.mjs
tools/native-startup/: pyproject.toml
tools/native-startup/src/: sitecustomize.py
