[project]
name = "neuromouse-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "neuromouse-adapters",
    "neuromouse-backend",
    "neuromouse-contract",
    "neuromouse-core",
    "neuromouse-sdk",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "ty",
]

[tool.uv]
package = false

[tool.uv.sources]
neuromouse-adapters = { workspace = true }
neuromouse-backend = { workspace = true }
neuromouse-contract = { workspace = true }
neuromouse-core = { workspace = true }
neuromouse-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "contracts",
    "packages/adapters",
    "packages/backend",
    "packages/core",
    "packages/sdk",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sdk/src",
]
testpaths = [
    "contracts/tests",
    "packages/adapters/tests",
    "packages/backend/tests",
    "packages/core/tests",
    "packages/sdk/tests",
]

[tool.ruff]
include = [
    "contracts/**/*.py",
    "packages/adapters/**/*.py",
    "packages/backend/**/*.py",
    "packages/core/**/*.py",
    "packages/sdk/**/*.py",
]
line-length = 100
src = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sdk/src",
]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.11"
root = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sdk/src",
]

[tool.ty.src]
include = [
    "contracts/src",
    "contracts/tests",
    "packages/adapters/src",
    "packages/adapters/tests",
    "packages/backend/src",
    "packages/backend/tests",
    "packages/core/src",
    "packages/core/tests",
    "packages/sdk/src",
    "packages/sdk/tests",
]
