[project]
name = "neuromouse-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "neuromouse-adapters",
    "neuromouse-backend",
    "neuromouse-contract",
    "neuromouse-core",
    "neuromouse-sandbox",
    "neuromouse-sdk",
    "neuromouse-sorting",
]

[dependency-groups]
dev = [
    "neuromouse-native-startup",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "ty",
]
docs = [
    "mkdocs-material>=9.5",
]

[tool.uv]
package = false
link-mode = "clone"
default-groups = ["dev", "docs"]

[tool.uv.sources]
neuromouse-adapters = { workspace = true }
neuromouse-backend = { workspace = true }
neuromouse-contract = { workspace = true }
neuromouse-core = { workspace = true }
neuromouse-sandbox = { workspace = true }
neuromouse-sdk = { workspace = true }
neuromouse-sorting = { workspace = true }
neuromouse-native-startup = { path = "tools/native-startup" }

[tool.uv.workspace]
members = [
    "contracts",
    "packages/adapters",
    "packages/backend",
    "packages/core",
    "packages/sandbox",
    "packages/sdk",
    "packages/sorting",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sandbox/src",
    "packages/sdk/src",
    "packages/sorting/src",
]
testpaths = [
    "contracts/tests",
    "packages/adapters/tests",
    "packages/backend/tests",
    "packages/core/tests",
    "packages/sandbox/tests",
    "packages/sdk/tests",
    "packages/sorting/tests",
    "examples",
]

[tool.ruff]
include = [
    "contracts/**/*.py",
    "packages/adapters/**/*.py",
    "packages/backend/**/*.py",
    "packages/core/**/*.py",
    "packages/sandbox/**/*.py",
    "packages/sdk/**/*.py",
    "packages/sorting/**/*.py",
]
line-length = 100
src = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sandbox/src",
    "packages/sdk/src",
    "packages/sorting/src",
]
target-version = "py311"
extend-exclude = [
    # Adversarial sandbox probes are intentionally terse hostile fixtures, not
    # production code; holding them to style rules (one-statement-per-line, bare
    # excepts) would obscure what each break-out attempt is doing.
    "packages/sandbox/tests/probes",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.11"
root = [
    "contracts/src",
    "packages/adapters/src",
    "packages/backend/src",
    "packages/core/src",
    "packages/sandbox/src",
    "packages/sdk/src",
    "packages/sorting/src",
]

[tool.ty.src]
include = [
    "contracts/src",
    "contracts/tests",
    "packages/adapters/src",
    "packages/adapters/tests",
    "packages/backend/src",
    "packages/backend/tests",
    "packages/core/src",
    "packages/core/tests",
    "packages/sandbox/src",
    "packages/sandbox/tests",
    "packages/sdk/src",
    "packages/sdk/tests",
    "packages/sorting/src",
    "packages/sorting/tests",
]
