[project]
name = "neuromouse-contract"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.136.0",
    "pydantic>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuromouse_contract"]
